# a2a-ui

./: .gitignore  LICENSE  MIGRACAO_CLAUDE_SDK.md  README.md  SOLUCAO_INTEGRACAO_CLAUDE.md  backend_server.py  fix-otimizador.sh  main.py  mesop_demo.py  start_a2a_ui.sh  start_claude_9999.sh  test_a2a_final.py  test_claude_api.py  test_claude_final.py  test_claude_sdk_integration.py  test_marvin_discovery.py  test_ui_integration.py  trigger_discovery.py
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
a2a_claude_sdk/src/a2a_claude_sdk/: types.py
a2a_mcp/: run_server_claude.py  test_mcp_server.py
a2a_mcp/agents/: orchestrator_agent.py
a2a_mcp/common/: workflow.py
agent_cards/: claude_agent.json
agents/: claude_agent.py  claude_sdk_agent.py
agents/marvin/: agent_claude.py  server_claude.py  start_marvin_claude.py
claude-code-sdk/: MIGRATION_COMPLETE.md  SOLUCAO_INTEGRACAO_CLAUDE.md  backend_server.py  claude_sdk_completo.py  claude_sdk_correto.py  claude_sdk_example.py  claude_sdk_real_example.py  run_a2a_claude.sh  run_with_claude_sdk.sh  start_claude_backend.sh  test_claude_direct.py  test_claude_sdk_status.py  test_claude_simple.py  test_who_are_you.py
claude-code-sdk/a2a_claude_sdk/: pyproject.toml
claude-code-sdk/a2a_mcp/: README.md  README_CLAUDE.md  start_claude_mcp.sh  start_mcp_claude.py
claude-code-sdk/a2a_mcp/common/: prompts.py  utils.py
claude-code-sdk/a2a_mcp/mcp/: claude_server.py  server.py
claude-code-sdk/claude_sdk_progressao/: 01_estrutura_basica.py  02_funcao_query.py  03_claude_code_options.py  04_blocos_avancados.py  05_ferramentas.py
claude-code-sdk/docs/: CLAUDE_SDK_A2A_INTEGRATION.md
claude-code-sdk/hosts/multiagent/: host_agent.py
claude-code-sdk/scripts/: force_discovery.py  test_direct_orchestrator.py  test_orchestrator_conversation.py
claude-code-sdk/tests/api/: test_message_send.py  test_message_stream.py
components/: conversation.py  enhanced_components.py
forms/: enhanced_forms.py
hosts/cli/: __main__.py
memory/agents/: README.md
memory/sessions/: README.md
pages/: agents_page_debug.py  agents_page_simple.py  agents_simple_list.py  agents_standard.py  agents_with_handler_management.py  settings.py  simple_agents.py  simple_agents_final.py  ultra_simple_agents.py
prp-crewai-python/: .env.example  README.md  pyproject.toml  setup.sh  start_all.sh  stop_all.sh
prp-crewai-python/agents/: otimizador_main.py
prp-crewai-python/examples/: create_campaign.py
prp-crewai-python/orchestrator/: __init__.py  models.py
scripts/: register_hello_world.py  start_marvin_local.sh  test_a2a_system.py  test_explicit_delegation.py
service/: claude_sdk_integration.py
service/client/: claude_sdk_client.py
service/server/: adk_host_manager.py  agent_discovery.py  in_memory_manager.py  mcp_agent_manager.py  server.py  test_image.py
state/: host_agent_service.py
tests/api/: README.md  conftest.py  demo_tests.py  test_error_handling.py  test_helloworld_integration.py
tests/integration/: test_marvin_output.py
utils/: test_handler_management.py
